fix css + add transcriptions

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <a
             href="https://dcube.fr/"
             target="_blank"
-            title="Consulter le site de dcube ( nouvelle fenêtre"
+            title="Consulter le site de dcube - nouvelle fenêtre"
             class="main-logo"
           >
             <img
@@ -266,7 +266,7 @@
 
           <section class="slide dcube-page-full dcube-bg-color-c2">
             <div class="inside">
-              <div class="dcube-block" style="position: absolute; width: 100%">
+              <div class="dcube-block dcube-demo">
                 <h3
                   class="titre dcube-subtitle dcube-subtitle-dry dcube-margin-b0"
                 >
@@ -316,85 +316,120 @@
                         changements de normes et réglementations.
                       </p>
                     </div>
-                    <div class="dcube-transcription-cols dcube-cols">
+                    <div class="dcube-transcription-cols">
                       <div class="dcube-transcription-col">
                         <h4>Deepgram</h4>
                         <p>
-                          Les services publics numérique et certains services
-                          privées ont l'obligation d'être accessible de façon
-                          équivalente à tout citoyen qu'elle soit ou non en
-                          situation de handicap visuel auitif moteur troubles 10
-                          etc un service numérique accessible plus facile à
-                          utiliser pour les personnes handicappées et de qualité
-                          pour tous faciliter la mise en oeuvre de
-                          l'accessibilité numérique la et dite depuis 2009 le
-                          référentiel général d'amélioration de l'accessibilité
-                          rg créée pour mettre en coeure l'article 47 dans la
-                          loi handicap 2005 et son décret d'application actu en
-                          2019 fait réguloèrement l'objet de nouvelles versions
-                          et mises à jour pour s'adapter aux évolutions du web
-                          et aussi au changements de normes et réglementations
+                          Les services publics
+                          <span class="error">numérique</span> et certains
+                          services privées ont l'obligation d'être
+                          <span class="error">accessible</span> de façon
+                          équivalente à tout citoyen
+                          <span class="error">qu'elle</span> soit ou non en
+                          situation de handicap visuel auditif moteur
+                          <span class="error">troubles</span
+                          ><span class="error"> 10</span> etc un service
+                          numérique accessible
+                          <span class="error-blank"></span> plus facile à
+                          utiliser pour les personnes handicapées et de
+                          <span class="error-blank"></span> qualité pour tous
+                          faciliter la mise en oeuvre de l'accessibilité
+                          numérique <span class="error">la et dite</span> depuis
+                          2009 le référentiel général d'amélioration de
+                          l'accessibilité <span class="error">rg créée </span>
+                          pour mettre en oeuvre l'article 47 dans la loi
+                          handicap 2005 et son décret d'application
+                          <span class="error">actu</span> en 2019
+                          <span class="error-blank"></span> fait régulièrement
+                          l'objet de nouvelles versions et mises à jour pour
+                          s'adapter aux évolutions du web
+                          <span class="error">et</span> aussi
+                          <span class="error">au</span> changements de normes et
+                          réglementations
                         </p>
+                        <p>77,78 % de réussite</p>
                       </div>
                       <div class="dcube-transcription-col">
                         <h4>Google</h4>
                         <p>
-                          Les services publics numérique et certains services
-                          privés ont l'obligation d'être accessible de façon
-                          équivalente à tout citoyen qu'ils soient ou non en
-                          situation de handicap visuel auditif moteur trouble et
-                          cetera un service numérique accessible et plus facile
-                          à utiliser pour les personnes handicappées et de
-                          meilleure qualité pour tous pour faciliter la mise en
-                          oeuvre de l'accessibilité numérique l'a dit num et
-                          depuis 2009 le référentiel général d'amélioration de
-                          l'accessibilité RG2 a créé pour mettre en oeuvre
-                          l'article 47 de la loi Handicap 2005 et son décret
-                          d'application actualisant demain il fait régulièrement
-                          l'objet de nouvelle version est mise à jour pour
-                          s'adapter aux évolutions du web mais aussi aux
-                          changements de normes et réglementations
+                          Les services publics
+                          <span class="error">numérique</span> et certains
+                          services privés ont l'obligation d'être
+                          <span class="error">accessible</span> de façon
+                          équivalente à tout citoyen
+                          <span class="error">qu'ils soient</span> ou non en
+                          situation de handicap visuel auditif moteur trouble
+                          <span class="error_blank"></span> et cetera un service
+                          numérique accessible
+                          <span class="error">et</span> plus facile à utiliser
+                          pour les personnes handicapées et de meilleure qualité
+                          pour tous pour faciliter la mise en œuvre de
+                          l'accessibilité numérique
+                          <span class="error">l'a dit num</span> et depuis 2009
+                          le référentiel général d'amélioration de
+                          l'accessibilité <span class="error">RG2 a</span> créé
+                          pour mettre en œuvre l'article 47 de la loi Handicap
+                          2005 et son décret d'application<span class="error"
+                            >actualisant demain</span
+                          ><span class="error_blank"></span>
+                          il fait régulièrement l'objet de
+                          <span class="error">nouvelle version</span> est mise à
+                          jour pour s'adapter aux évolutions du web mais aussi
+                          aux changements de normes et réglementations
                         </p>
+                        <p>85,47 % de réussite</p>
                       </div>
                       <div class="dcube-transcription-col">
                         <h4>Microsoft</h4>
                         <p>
                           les services publics numériques et certains services
                           privés ont l'obligation d'être accessible de façon
-                          équivalente à tout ciroten qu'il soit ou non en
-                          situation de handicap visuel auditif moteur trouble 10
-                          et cetera un service numérique accessible et plus
-                          facile à utiliser pour les personnes handicappées et
-                          de meilleure qualité pour tous pour faciliter la mise
-                          en oeuvre de l'accessibilité numérique la dinum édite
-                          depuis 2009 le référentiel général d'amélioration de
-                          l'accessibilité RG 2A crée pour mettre en oeuvre
-                          l'article 47 de la loi handicap de 2005 et son décret
-                          d'application actualité en 2019 il fait réulièrement
-                          l'objet de nouvelles versions et mises à jour pour
-                          s'adapter aux évolutions du web mais aussi aux
-                          changements de normes et réglementations
+                          équivalente à tout citoyen qu'il soit ou non en
+                          situation de handicap visuel auditif moteur trouble
+                          <span class="error">10</span> et cetera un service
+                          numérique accessible
+                          <span class="error">et</span> plus facile à utiliser
+                          pour les personnes handicapées et de meilleure qualité
+                          pour tous pour faciliter la mise en œuvre de
+                          l'accessibilité numérique la dinum édite depuis 2009
+                          le référentiel général d'amélioration de
+                          l'accessibilité <span class="error">RG 2A</span> crée
+                          pour mettre en œuvre l'article 47 de la loi handicap
+                          de 2005 et son décret d'application actualité en 2019
+                          il fait réulièrement l'objet de nouvelles versions et
+                          mises à jour pour s'adapter aux évolutions du web mais
+                          aussi aux changements de normes et réglementations
                         </p>
+                        <p>94,87% de réussite</p>
                       </div>
                       <div class="dcube-transcription-col">
                         <h4>Mozilla</h4>
                         <p>
-                          les services publics numérique certains services
+                          les services publics
+                          <span class="error">numérique</span
+                          ><span class="error_blank"></span> certains services
                           privés ont l'obligation d'être accessible de façon
-                          équivalente à tout citoyen qu'ils soient ou non en
+                          équivalente à tout citoyen
+                          <span class="error">qu'ils soient</span> ou non en
                           situation de handicap visuel auditif moteur
-                          trouble.dys cetera un service numérique accessible est
-                          plus facile à utiliser pour les personnes handicappées
-                          et de meilleure qualité pour tous pour faciliter la
-                          mise en oeuvre de l'accessibilité numérique l'a dit
-                          num et dit depuis 2009 le référentiel général
-                          d'amélioration de l'accessibilité RG2 a créé pour
-                          mettre en oeuvre l'article 47 de la loi Handicap 2005
-                          et son décret d'application actualiser en 2019 il fait
-                          régulièrement l'objet de nouvelle version est mise à
-                          jour pour s'adapter aux évolutions d uweb mais aussi
+                          <span class="error">trouble.dys cetera</span> un
+                          service numérique accessible est plus facile à
+                          utiliser pour les personnes handicapées et de
+                          meilleure qualité pour tous pour faciliter la mise en
+                          œuvre de l'accessibilité numérique
+                          <span class="error">l'a dit num</span>
+                          <span class="error">et dit</span> depuis 2009 le
+                          référentiel général d'amélioration de l'accessibilité
+                          <span class="error">RG2 a</span> créé pour mettre en
+                          œuvre l'article 47 de la loi Handicap 2005 et son
+                          décret d'application
+                          <span class="error">actualiser</span> en 2019 il fait
+                          régulièrement l'objet de
+                          <span class="error">nouvelle version est mise</span> à
+                          jour pour s'adapter aux évolutions du web mais aussi
                           aux changements de normes et réglementations.
                         </p>
+                        <p>86,32% de réussite</p>
                       </div>
                     </div>
                   </div>
@@ -405,7 +440,7 @@
 
           <section class="slide dcube-page-full dcube-bg-color-c2">
             <div class="inside">
-              <div class="dcube-block">
+              <div class="dcube-block dcube-demo">
                 <h3
                   class="titre dcube-subtitle dcube-subtitle-dry dcube-margin-b0"
                 >
@@ -419,7 +454,7 @@
                   </video>
                 </div>
                 <div
-                  class="toggle-gp-article toggle-gp dcube-toggle-box center"
+                  class="toggle-gp-article toggle-gp dcube-toggle-box center dcube-margin-b3"
                 >
                   <button
                     class="dcube-btn dcube-btn-toggle"
@@ -454,7 +489,7 @@
                         changements de normes et réglementations.
                       </p>
                     </div>
-                    <div class="dcube-transcription-cols dcube-cols">
+                    <div class="dcube-transcription-cols">
                       <div class="dcube-transcription-col">
                         <h4>Deepgram</h4>
                         <p></p>
@@ -480,7 +515,7 @@
 
           <section class="slide dcube-page-full dcube-bg-color-c2">
             <div class="inside">
-              <div class="dcube-block">
+              <div class="dcube-block dcube-demo">
                 <h3
                   class="titre dcube-subtitle dcube-subtitle-dry dcube-margin-b0"
                 >
@@ -494,7 +529,7 @@
                   </video>
                 </div>
                 <div
-                  class="toggle-gp-article toggle-gp dcube-toggle-box center"
+                  class="toggle-gp-article toggle-gp dcube-toggle-box center dcube-margin-b3"
                 >
                   <button
                     class="dcube-btn dcube-btn-toggle"
@@ -529,7 +564,7 @@
                         changements de normes et réglementations.
                       </p>
                     </div>
-                    <div class="dcube-transcription-cols dcube-cols">
+                    <div class="dcube-transcription-cols">
                       <div class="dcube-transcription-col">
                         <h4>Deepgram</h4>
                         <p></p>
@@ -785,7 +820,7 @@
 
           <section class="slide dcube-page-full dcube-bg-color-c2">
             <div class="inside">
-              <div class="dcube-block" style="position: absolute; width: 100%">
+              <div class="dcube-block dcube-demo">
                 <h3
                   class="titre dcube-subtitle dcube-subtitle-dry dcube-margin-b0"
                 >
@@ -819,7 +854,17 @@
                       class="dcube-block dcube-transcription center dcube-margin-b1"
                     >
                       <h4 class="center">Texte à vocaliser</h4>
-                      <p></p>
+                      <p>
+                        Samuel, développeur au sein de l'entreprise Dcube,
+                        rencontre souvent des problèmes de timeout sur les gros
+                        traitements des demandes entrantes et il n'est pas le
+                        seul. 3, 4, 5 personnes de l'équipe également dont sa
+                        collègue Emmanuelle. Leur PO tèj souvent ses US et
+                        réalise des tool-in-actions. Samuel a une chatte qui
+                        s'appelle Qwerty. Emmanuelle déteste les homonymes
+                        surtout quand elle essaie de comprendre en lisant sur
+                        les lèvres : "le ver vert va vers le verre vert".
+                      </p>
                     </div>
                     <div class="dcube-transcription-cols dcube-cols">
                       <div class="dcube-transcription-col">
@@ -1083,33 +1128,37 @@
                           <div class="dcube-transcription-col">
                             <h4>Deepgram</h4>
                             <p>
-                              Annie est arrivé à la maison. Elle est arrivée à
-                              la maison. Nous les filles sommes arrivés à la
-                              maison.
+                              Annie est <span class="error">arrivé</span> à la
+                              maison. Elle est arrivée à la maison. Nous les
+                              filles sommes <span class="error">arrivés</span> à
+                              la maison.
                             </p>
                           </div>
                           <div class="dcube-transcription-col">
                             <h4>Google</h4>
                             <p>
-                              Annie est arrivé à la maison. Elle est arrivée à
-                              la maison. Nous les filles sommes arrivés à la
-                              maison.
+                              Annie est <span class="error">arrivé</span> à la
+                              maison. Elle est arrivée à la maison. Nous les
+                              filles sommes <span class="error">arrivés</span> à
+                              la maison.
                             </p>
                           </div>
                           <div class="dcube-transcription-col">
                             <h4>Microsoft</h4>
                             <p>
-                              Annie est arrivé à la maison. Elle est arrivée à
-                              la maison. Nous les filles sommes arrivés à la
-                              maison.
+                              Annie est <span class="error">arrivé</span> à la
+                              maison. Elle est arrivée à la maison. Nous les
+                              filles sommes <span class="error">arrivés</span> à
+                              la maison.
                             </p>
                           </div>
                           <div class="dcube-transcription-col">
                             <h4>Mozilla</h4>
                             <p>
-                              Annie est arrivé à la maison. Elle est arrivée à
-                              la maison. Nous les filles sommes arrivés à la
-                              maison.
+                              Annie est <span class="error">arrivé</span> à la
+                              maison. Elle est arrivée à la maison. Nous les
+                              filles sommes <span class="error">arrivés</span> à
+                              la maison.
                             </p>
                           </div>
                         </div>
