lien des slides

--- a/index.html
+++ b/index.html
@@ -2196,7 +2196,14 @@
                 </h2>
                 <div class="dcube-merci">
                   <ul class="dcube-text-left">
-                    <li>Retrouvez ma présentation</li>
+                    <li>
+                      <a
+                        href="https://emma11y.github.io/speech-to-text-conference/"
+                        target="_blank"
+                        title="Consulter les slides de la conférence Speech-To-Text - nouvelle fenêtre"
+                        >Retrouvez ma présentation</a
+                      >
+                    </li>
                     <li>
                       <a
                         title="Consulter la transcription écrite de la conférence Speech-To-Text"
