--- a/index.html
+++ b/index.html
@@ -2229,7 +2229,7 @@
                         >Donnez votre feedback sur cette présentation</a
                       >
                     </li>
-                    <li>
+                    <!-- <li>
                       Rejoignez la conférence pour poser vos questions :
                       <a
                         href="https://translate.it/HCWXT"
@@ -2237,24 +2237,24 @@
                         title="Rejoindre la conférence pour poser vos questions - nouvelle fenêtre"
                         >https://translate.it/HCWXT</a
                       >
-                    </li>
+                    </li>-->
                   </ul>
                   <div>
                     <p>Feedback</p>
                     <img
                       class="dcube-merci-img"
-                      alt=""
+                      alt="Code-barre pour donner son feedback"
                       src="img_slide/dcube/API Speech-To-Text _ quelles sont ses avantages et ses limites _ QRCode.png"
                     />
                   </div>
-                  <div>
+                  <!-- <div>
                     <p>Posez vos questions</p>
                     <img
                       class="dcube-merci-img"
                       alt=""
                       src="img_slide/dcube/Qr Code Translator.png"
                     />
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
