--- a/index.html
+++ b/index.html
@@ -2185,7 +2185,7 @@
             </div>
           </section>
 
-          <section class="slide dcube-page-full dcube-bgcolor-c4a">
+          <section class="slide dcube-page-full dcube-bgcolor-c4">
             <div class="inside dcube-align-center center">
               <div class="dcube-block">
                 <h2 class="dcube-title-chapter dcube-title-chapter-comfy">
@@ -2197,28 +2197,32 @@
                 <div class="dcube-merci">
                   <ul class="dcube-text-left">
                     <li>
+                      Retrouvez ma présentation :
                       <a
                         href="https://emma11y.github.io/speech-to-text-conference/"
                         target="_blank"
                         title="Consulter les slides de la conférence Speech-To-Text - nouvelle fenêtre"
-                        >Retrouvez ma présentation</a
+                        >https://emma11y.github.io/speech-to-text-conference/</a
                       >
                     </li>
                     <li>
+                      Retrouvez la transcription écrite de ma présentation :
                       <a
                         title="Consulter la transcription écrite de la conférence Speech-To-Text"
                         target="_blank"
-                        href="https://github.com/emma11y/speech-to-text-conference/blob/main/README.md"
-                        >Retrouvez la transcription écrite de ma présentation</a
+                        href="https://github.com/emma11y/speech-to-text-conference/"
+                        >https://github.com/emma11y/speech-to-text-conference/</a
                       >
                     </li>
                     <li>
+                      Retrouvez les sources de mon projet Speech-To-Text en
+                      Angular :
                       <a
                         title="Consulter les sources du projet Speech-To-Text"
                         href="https://github.com/emma11y/speech-to-text"
                         target="_blank"
-                        >Retrouvez les sources de mon projet Speech-To-Text en
-                        Angular</a
+                      >
+                        https://github.com/emma11y/speech-to-text</a
                       >
                     </li>
                     <li>
@@ -2229,15 +2233,15 @@
                         >Donnez votre feedback sur cette présentation</a
                       >
                     </li>
-                    <!-- <li>
+                    <li>
                       Rejoignez la conférence pour poser vos questions :
                       <a
-                        href="https://translate.it/HCWXT"
+                        href="https://translate.it/DEHAT"
                         target="_blank"
                         title="Rejoindre la conférence pour poser vos questions - nouvelle fenêtre"
-                        >https://translate.it/HCWXT</a
+                        >https://translate.it/DEHAT</a
                       >
-                    </li>-->
+                    </li>
                   </ul>
                   <div>
                     <p>Feedback</p>
@@ -2247,14 +2251,14 @@
                       src="img_slide/dcube/API Speech-To-Text _ quelles sont ses avantages et ses limites _ QRCode.png"
                     />
                   </div>
-                  <!-- <div>
+                  <div>
                     <p>Posez vos questions</p>
                     <img
                       class="dcube-merci-img"
                       alt=""
                       src="img_slide/dcube/Qr Code Translator.png"
                     />
-                  </div>-->
+                  </div>
                 </div>
               </div>
             </div>
