--- a/index.html
+++ b/index.html
@@ -2236,10 +2236,10 @@
                     <li>
                       Rejoignez la conférence pour poser vos questions :
                       <a
-                        href="https://translate.it/DEHAT"
+                        href="https://translate.it"
                         target="_blank"
                         title="Rejoindre la conférence pour poser vos questions - nouvelle fenêtre"
-                        >https://translate.it/DEHAT</a
+                        >translate.it</a
                       >
                     </li>
                   </ul>
@@ -2251,14 +2251,14 @@
                       src="img_slide/dcube/API Speech-To-Text _ quelles sont ses avantages et ses limites _ QRCode.png"
                     />
                   </div>
-                  <div>
+                  <!--<div>
                     <p>Posez vos questions</p>
                     <img
                       class="dcube-merci-img"
                       alt=""
                       src="img_slide/dcube/Qr Code Translator.png"
                     />
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
