--- a/luxembourg/index.html
+++ b/luxembourg/index.html
@@ -61,7 +61,7 @@
     <!-- Opengraph / Twitter cards -->
     <meta
       property="og:title"
-      content="API Speech-To-Text : quelles sont ses avantages et ses limites ? – Support de présentation - DCube"
+      content="API Speech-To-Text : quelles sont ses avantages et ses limites ? – Support de présentation de Voxxed Days Luxembourg 2021 - dcube"
     />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
@@ -71,7 +71,7 @@
     />
     <meta
       property="og:url"
-      content="https://emma11y.github.io/speech-to-text-conference"
+      content="https://emma11y.github.io/speech-to-text-conference/luxembourg"
     />
     <meta property="og:site_name" content="dcube" />
     <meta property="article:tag" content="accessibilité" />
@@ -82,17 +82,17 @@
     <meta property="article:tag" content="speech recognition" />
     <meta
       property="og:image"
-      content="https://emma11y.github.io/speech-to-text-conference/cover.png"
+      content="https://emma11y.github.io/speech-to-text-conference/luxembourg/cover.png"
     />
     <meta
       property="og:image:secure_url"
-      content="https://emma11y.github.io/speech-to-text-conference/cover.png"
+      content="https://emma11y.github.io/speech-to-text-conference/luxembourg/cover.png"
     />
     <meta property="og:image:width" content="1350" />
     <meta property="og:image:height" content="675" />
     <meta
       name="twitter:title"
-      content="API Speech-To-Text : quelles sont ses avantages et ses limites ? – Support de présentation -  DCube"
+      content="API Speech-To-Text : quelles sont ses avantages et ses limites ? – Support de présentation de Voxxed Days Luxembourg 2021 - dcube"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -102,7 +102,7 @@
     <meta name="twitter:site" content="@eaboaf_" />
     <meta
       name="twitter:image"
-      content="https://emma11y.github.io/speech-to-text-conference/cover.png"
+      content="https://emma11y.github.io/speech-to-text-conference/luxembourg/cover.png"
     />
     <meta name="twitter:creator" content="@eaboaf_" />
   </head>
